@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.3.8")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.0")
   }
 }
 
@@ -12,15 +12,14 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-  id 'org.springframework.boot' version '2.3.4.RELEASE'
-  id 'org.owasp.dependencycheck' version '6.0.3'
-  id 'com.github.ben-manes.versions' version '0.33.0'
-  id 'org.sonarqube' version '3.0'
-  id 'info.solidsoft.pitest' version '1.5.2'
-  id 'io.freefair.lombok' version '5.3.0'
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'org.springframework.boot' version '2.6.7'
+  id 'org.owasp.dependencycheck' version '7.1.0.1'
   id 'uk.gov.hmcts.java' version '0.12.5'
-
+  id 'com.github.ben-manes.versions' version '0.38.0'
+  id 'org.sonarqube' version '3.0'
+  id 'info.solidsoft.pitest' version '1.7.4'
+  id 'io.freefair.lombok' version '5.3.3.3'
 }
 
 apply plugin: 'net.serenity-bdd.aggregator'
@@ -78,11 +77,15 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
   useJUnitPlatform()
-
   testLogging {
     exceptionFormat = 'full'
   }
 }
+
+tasks.withType(Copy) {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 
 test {
   failFast = true
@@ -114,6 +117,12 @@ task tests {
   dependsOn test, integration, functional
 }
 
+task fortifyScan(type: JavaExec) {
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '8.29'
@@ -132,8 +141,8 @@ pmd {
 jacocoTestReport {
   executionData(test, integration)
   reports {
-    xml.enabled = true
-    csv.enabled = false
+    xml.required = true
+    csv.required = false
     xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
@@ -142,8 +151,8 @@ pitest {
   junit5PluginVersion = '0.12'
   targetClasses = ['uk.gov.hmcts.reform.wacaseeventhandler.*']
   excludedClasses = [
-      'uk.gov.hmcts.reform.wacaseeventhandler.config.*',
-      'uk.gov.hmcts.reform.wacaseeventhandler.Application'
+    'uk.gov.hmcts.reform.wacaseeventhandler.config.*',
+    'uk.gov.hmcts.reform.wacaseeventhandler.Application'
   ]
   threads = 10
   outputFormats = ['XML', 'HTML']
@@ -168,9 +177,10 @@ sonarqube {
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wacaseeventhandler/config/**," +
-                                 "src/testUtils/java/uk/gov/hmcts/reform/wacaseeventhandler/**," +
-                                 "src/main/java/uk/gov/hmcts/reform/wacaseeventhandler/Application.java"
-
+      "src/testUtils/java/uk/gov/hmcts/reform/wacaseeventhandler/**," +
+      "src/main/java/uk/gov/hmcts/reform/wacaseeventhandler/Application.java," +
+      "src/main/java/uk/gov/hmcts/reform/wacaseeventhandler/clients/*Consumer.java," +
+      "src/main/java/uk/gov/hmcts/reform/wacaseeventhandler/entity/CaseEventMessageEntity.java"
   }
 }
 
@@ -204,8 +214,49 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
       entry 'guava'
     }
-    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+
+    //CVE-2021-27568
+    dependency group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+
+    //CVE-2021-28170
+    dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
+
+    //CVE-2021-42550
+    dependencySet(group: 'ch.qos.logback', version: '1.2.10') {
+      entry 'logback-classic'
+      entry 'logback-core'
+    }
+    dependencySet(group: 'io.netty', name: 'netty-all', version: '4.1.71.Final') {
+      entry 'netty-buffer'
+      entry 'netty-codec'
+      entry 'netty-codec-dns'
+      entry 'netty-codec-http'
+      entry 'netty-codec-http2'
+      entry 'netty-handler'
+      entry 'netty-handler-proxy'
+      entry 'netty-handler'
+      entry 'netty-transport-native-unix-common'
+      entry 'netty-transport-native-kqueue'
+      entry 'netty-transport-native-epoll'
+      entry 'netty-transport'
+      entry 'netty-codec-socks'
+      entry 'netty-common'
+      entry 'netty-resolver'
+      entry 'netty-resolver-dns'
+      entry 'netty-resolver-dns-native-macos'
+    }
+
+    dependencySet(group: 'org.seleniumhq.selenium', version: '4.1.2') {
+      entry 'selenium-java'
+      entry 'selenium-remote-driver'
+      entry 'selenium-firefox-driver'
+      entry 'selenium-chrome-driver'
+      entry 'selenium-safari-driver'
+      entry 'selenium-edge-driver'
+      entry 'selenium-api'
+      entry 'selenium-support'
+    }
   }
 }
 
@@ -216,13 +267,16 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.0',
-  junitPlatform   : '1.7.0',
-  reformLogging   : '5.1.5',
-  springBoot      : '2.4.2',
-  springfoxSwagger: '2.9.2',
-  serenity        : '2.2.12',
-  pitest          : '1.5.2'
+  junit        : '5.7.2',
+  junitPlatform: '1.7.2',
+  reformLogging: '5.1.9',
+  springDoc    : '1.6.6',
+  springBoot   : '2.6.3',
+  serenity     : '3.1.20',
+  pitest       : '1.7.4',
+  logbook      : '2.6.2',
+  tomcat       : '9.0.58',
+  log4j        : '2.17.1'
 ]
 
 ext.libraries = [
@@ -240,48 +294,59 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  implementation('org.springframework.boot:spring-boot-starter-validation')
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
+  implementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.5.1'
 
-  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts.java-logging', name: 'java-logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
+
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
+
+  implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
+
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
+
   implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-
-  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.0.2'
-
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.3'
-
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.43'
-
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.7.5'
+  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.4.2'
 
-  compile 'org.camunda.bpm:camunda-external-task-client:1.4.0'
-  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
 
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
+  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
+  implementation 'org.camunda.bpm:camunda-external-task-client:7.15.0'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
 
-  testCompile group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
-  testCompile group: 'com.jparams', name: 'to-string-verifier', version: '1.4.8'
-  testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
-  testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-  testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  testImplementation group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
+  testImplementation group: 'com.jparams', name: 'to-string-verifier', version: '1.4.8'
+  testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.16.2'
+  testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: '1.16.2'
 
-
-  testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
-  testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.6.0'
+  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'
+  testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
 
   testUtilsImplementation sourceSets.main.runtimeClasspath
   testUtilsImplementation sourceSets.test.runtimeClasspath
@@ -295,6 +360,13 @@ dependencies {
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
 
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.0'
+  implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
+  implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.14.0'
+
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.3'
+
+  runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.4'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.wacaseeventhandler.Application'
@@ -310,5 +382,5 @@ bootJar {
 }
 
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
